# minimal-api

./: README.md  catalog-info.yaml  pyproject.toml
minimal_api/: __main__.py
