[tool.poetry]
name = "minimal-api"
version = "0.1.0"
description = ""
authors = ["Thomas Nokleby <thonok@arkivverket.no>"]
readme = "README.md"
packages = [{include = "minimal_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
